# uuidify-python

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  openapi.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yaml  sync_spec.yaml  test.yaml
examples/: demo.py
src/uuidify/: __init__.py  client.py  exceptions.py
tests/: test_client.py
